lab1/Test/L1-A-8-85.cmm
int XW7LiRiMqYirqowEyh6M 
;
int q2NecqYI ( struct / {
}yAXELji , struct UcDz Z ) {
  struct UTQZCs9gt9 {
    int aSf ;
    struct xyU3THzAPg5vQ qUJ2Kauq_urDINXFHtR ;
    float _ePcVjTTUl4AOqhfVQYF ;
  }gC6f6gG9htBkPhF = aweY7aZ5aexQI , u0eN4fr [ 1106471680 
    ] ;
  return S = pX && iU7NL0EaOP4 >= W540 >= + pmYvsPJmt8rM 
    * ! aqFZ0h ( MKCbZXUrQiV1VV205U || Nk != pBwi1zvGO0pBS_HE7Rfe 
    - e79i9xx1XZqxRxB [ ShMtWjrhPSk9mMwCJ = vCzs7k > ZNTI 
    * kv05A [ q1NrnyJcsG || z && ( im1vs7dp < - lhwwvb4 
    ( brqnN2cUu , s8NWzjO6M , D21WLYjazIvV_pT8h , fEzmFi1hJ 
    || kdCG0LvGWw5GcH2F == k3JF4uKRJWEhDWRv * b4 ) ) ] 
    <= 1533327816 / - - 1862770339.207952919 ] / - Xf5NkoTXslwBW9_vF 
    ( ) . sJ ) ;
}
int ;
int ;
int JjDtPen ( ) {
  if ( NBMLlIbSt )   if ( ClWI8ivRtuE3x4OEUQ )   bvD6Jb3CUo_U 
    ;
else   MIGbAOg8mN ;

else   if ( WLtSmtPC4HcPRJY_ ) {
    while ( e5xRGtY2bkAnKgMgFl6O )     Qd962GPqJwFuXEf 
      517985501.191077174 ;

  }

}
int ;
int ;
int KT ( ) {
}
int ;
int ;
int ;
int QefdBfnZv6 , qZt0YTcDf 

;
int ;
